kubernetes/apps/security/policies/kyverno/app/netpol.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: kyverno
spec:
  description: "Network policy for Kyverno policy engine"
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: kyverno
  ingress:
    # Allow same namespace traffic
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kyverno
    # Allow webhook from kube-apiserver
    - fromEntities:
        - kube-apiserver
        - host
        - remote-node
  egress:
    # Allow same namespace traffic
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kyverno
    # Allow kube-apiserver access
    - toEntities:
        - kube-apiserver
        - host
        - remote-node
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
    # Allow external registry checks
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
    # Allow DNS
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
